--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Lisrod.github.io/mundopatin",
+  "homepage": "https://lisrod.github.io/mundopatin/",
   "name": "react-mundoPatin",
   "version": "0.1.0",
   "private": true,
